--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 h1 {
   font-family: "Montserrat";
   font-weight: 900;
-  font-size: 3.5rem;
+  font-size: 3.3rem;
   line-height: 1.5;
   color: white;
 }
@@ -60,7 +60,7 @@ h3 {
 
 /* Title Image */
 .title-image {
-  width: 90%;
+  width: 110%;
   transform: rotate(15deg);
 }
 
@@ -193,3 +193,15 @@ h3 {
 .download-button-end {
     margin: 1% 3% 1% 0;
   }
+
+/* Media Queries */
+@media (max-width: 1108px) {
+  
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+  transform: rotate(0);
+  }
+}
